tequila changed to recipe site

--- a/alkoholtyper.html
+++ b/alkoholtyper.html
@@ -8,11 +8,13 @@
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/alkoholtyper.css">
   <title>Typer af alkohol</title>
+  <meta name="description" content="">
+  <meta name="keywords" content="">
 </head>
 <body>
     <header>
         <nav>
-          <a href="https://magn3054.github.io/drinks/index.html"><img src="img/logo.svg" alt="Hjemmside logo"></a>
+          <a href="https://magn3054.github.io/drinks"><img src="img/logo.svg" alt="Hjemmside logo"></a>
           <div>
             <a href="https://magn3054.github.io/drinks/cocktails.html">Cocktails</a>
             <a href="https://magn3054.github.io/drinks/stand-by.html">Mocktails</a>
@@ -29,27 +31,45 @@
                 <div class="column left">
                   <a href="https://magn3054.github.io/drinks/tequila.html">
                     <div class="label">
-                      <img src="img/tequila.webp" alt="">
-                      <h3>Tequila</h3>
-                      <p>Tequila er en ikonisk mexicansk spiritus lavet af agaveplanten. Med sin karakteristiske smag og stærke alkoholindhold er tequila elsket verden over. Fra traditionelle margaritas til lækre shots med salt og citron er tequila synonymt med livlig feststemning og uforglemmelige øjeblikke.</p>
+                      <img src="img/tequila.webp" alt="To shots af tequila med salt på rimmen og en flaske tequila i baggrunden">
+                      <h2>Tequila</h2>
+                      <ul>
+                        <li>Margarita</li>
+                        <li>Tequila Sunrise</li>
+                        <li>Paloma</li>
+                        <li>Tequila Mojito</li>
+                        <li>Tequila Smash</li>
+                      </ul>
                     </div>
                   </a>
                 </div>
                 <div class="column mid">
                   <a href="https://magn3054.github.io/drinks/stand-by.html">
                     <div class="label">
-                      <img src="img/rom.webp" alt="">
-                      <h3>Rom</h3>
-                      <p>Rom er en ældgammel spiritus, der stammer fra sukkerrørssaften. Med sin rige historie og komplekse smagsprofil er rom elsket verden over. Fra den søde og krydrede smag af rom til den subtile dybde af lagring, tilbyder denne spiritus en oplevelse af varme og eventyr i hver slurk.</p>
+                      <img src="img/rom.webp" alt="To shots af rom og en fin lille firkantet flaske rom i baggrunden">
+                      <h2>Rom</h2>
+                      <ul>
+                        <li>Caipirinha</li>
+                        <li>Mojito</li>
+                        <li>Piña Colada</li>
+                        <li>Daiquiri</li>
+                        <li>Mai Tai</li>
+                      </ul>
                     </div>
                   </a>
                 </div>
                 <div class="column right">
                   <a href="https://magn3054.github.io/drinks/gin.html">
                     <div class="label">
-                      <img src="img/gin.webp" alt="">
-                      <h3>Gin</h3>
-                      <p>Gin er en populær spiritus kendt for sin komplekse smag og aromaer af enebær og andre botanicals. Denne alsidige spiritus bruges i et væld af cocktails, fra klassiske gin og tonics til forfriskende martinier. Gin er blevet en favorit blandt cocktailentusiaster for sin evne til at skabe smagfulde og unikke drikkeoplevelser.</p>
+                      <img src="img/gin.webp" alt="To shots af gin og en flaske gin ved siden af">
+                      <h2>Gin</h2>
+                      <ul>
+                        <li>Gin & Tonic</li>
+                        <li>Negroni</li>
+                        <li>Gimlet</li>
+                        <li>Gin Martini</li>
+                        <li>Tom Collins</li>
+                      </ul>
                     </div>
                   </a>
                 </div>
@@ -59,27 +79,45 @@
                 <div class="column left">
                   <a href="https://magn3054.github.io/drinks/stand-by.html">
                     <div class="label">
-                      <img src="img/vodka.webp" alt="">
-                      <h3>Vodka</h3>
-                      <p>Vodka er en klar og neutral spiritus, der er elsket for sin alsidighed og evne til at blande sig godt med forskellige mixere. Med sin rene smag og neutralitet er vodka en favorit i et væld af cocktails, fra den klassiske vodka tonic til forfriskende cosmopolitans. Vodka er synonym med enkelt og alligevel sofistikeret drikkeglæde.</p>
+                      <img src="img/vodka.webp" alt="En flaske vodka med teksten Vodka best in the world">
+                      <h2>Vodka</h2>
+                      <ul>
+                        <li>Vodka Martini</li>
+                        <li>Moscow Mule</li>
+                        <li>Bloddy Mary</li>
+                        <li>Cosmopolitan</li>
+                        <li>White Russian</li>
+                      </ul>
                     </div>
                   </a>
                 </div>
                 <div class="column mid">
                   <a href="https://magn3054.github.io/drinks/stand-by.html">
                     <div class="label">
-                      <img src="img/whiskey.webp" alt="">
-                      <h3>Whiskey</h3>
-                      <p>Whiskey er en ældgammel spiritus, der har vundet hjerter over hele verden med sin komplekse smag og dybe karakter. Fra den røgede peatiness af skotsk single malt til den søde karamelagtige varme af amerikansk bourbon, er whiskey synonym med tradition, håndværk og ren nydelse.</p>
+                      <img src="img/whiskey.webp" alt="Et enkelt glas whiskey">
+                      <h2>Whiskey</h2>
+                      <ul>
+                        <li>Whiskey Sour</li>
+                        <li>Old Fashioned</li>
+                        <li>Whiskey Smash</li>
+                        <li>Manhattan</li>
+                        <li>Rob Roy</li>
+                      </ul>
                     </div>
                   </a>
                 </div>
                 <div class="column right">
                   <a href="https://magn3054.github.io/drinks/stand-by.html">
                     <div class="label">
-                      <img src="img/snaps.webp" alt="">
-                      <h3>Snaps</h3>
-                      <p>Snaps er en dansk traditionel spiritus, ofte drukket som et supplement til måltider eller ved særlige lejligheder. Med sin krydrede smag og karakteristiske aroma tilføjer snaps en festlig stemning til enhver sammenkomst. Fra traditionelle krydderier som kommen og dild til mere moderne varianter, er snaps en integreret del af dansk kultur.</p>
+                      <img src="img/snaps.webp" alt="En flaske snaps">
+                      <h2>Likører</h2>
+                      <ul>
+                        <li>Amaretto</li>
+                        <li>Kahlúa</li>
+                        <li>Cointreau</li>
+                        <li>Campari</li>
+                        <li>Triple Sec</li>
+                      </ul>
                     </div>
                   </a>
                 </div>
