--- a/gin.html
+++ b/gin.html
@@ -1,81 +1,62 @@
 <!DOCTYPE html>
 <html lang="da">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/logo.svg" type="image/x-icon">
-    <link rel="stylesheet" href="css/page-layout.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/index-main.css">
-    <title>Gin</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gin</title>
+  <link rel="icon" href="img/logo.svg" type="image/x-icon">
+  <link rel="stylesheet" href="css/page-layout.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/tequila.css">
+  <meta name="description" content="">
+  <meta name="keywords" content="">
 </head>
 <body>
     <header>
         <nav>
-          <a href="index.html"><img src="img/logo.svg" alt=""></a>
+          <a href="https://magn3054.github.io/drinks"><img src="img/logo.svg" alt="Hjemmside logo"></a>
           <div>
-            <a href="cocktails.html">Cocktails</a>
-            <a href="#">Mocktails</a>
-            <a href="#">Sjusser</a>
-            <a href="#">Shots</a>
-            <a href="alkoholtyper.html">Alkoholtyper</a>
+            <a href="https://magn3054.github.io/drinks/cocktails.html">Cocktails</a>
+            <a href="https://magn3054.github.io/drinks/stand-by.html">Mocktails</a>
+            <a href="https://magn3054.github.io/drinks/stand-by.html">Sjusser</a>
+            <a href="https://magn3054.github.io/drinks/stand-by.html">Shots</a>
+            <a class="hjem" href="https://magn3054.github.io/drinks/alkoholtyper.html">Alkoholtyper</a>
           </div>
         </nav>
-      </header>
-      <main> 
-          <article>
-            <section>
-              <div class="section-heading">
-                <span class="line"></span>
-                <span class="section-text">News</span>
-                <span class="line"></span>
-              </div>
-              
-              <div class="row">
-                <div class="column left">
-                  <div class="label">
-                    <img src="img/tequila.webp" alt="">
-                    <h3>Tequila</h3>
-                    <p>Tequila er en ikonisk mexicansk spiritus lavet af agaveplanten. Med sin karakteristiske smag og stærke alkoholindhold er tequila elsket verden over. Fra traditionelle margaritas til lækre shots med salt og citron er tequila synonymt med livlig feststemning og uforglemmelige øjeblikke.</p>
-                  </div>
-                </div>
-                <div class="column mid">
-                  <div class="label">
-                    <img src="img/martini.webp" alt="">
-                    <h3>Martini variationer</h3>
-                    <p>Martinier er en elegant cocktail bestående af gin eller vodka og tør vermouth, serveret i et køligt glas. Den perfekte balance mellem spiritus og vermouth skaber en forfriskende og sofistikeret smagsoplevelse. Martinien er et tidløst valg for dem, der søger klassisk raffinement i deres drinks.</p>
-                  </div>
-                </div>
-                <div class="column right">
-                  <div class="label">
-                    <img src="img/sjusser.webp" alt="">
-                    <h3>Martini variationer</h3>
-                    <p>Sjusser er en klassisk dansk cocktail lavet af en blanding af sodavand og alkohol efter valg. Denne forfriskende og boblende drink er populær til sociale sammenkomster og fester. Med sin lette smag af alkohol og brusende sodavand er sjusser en favorit blandt både unge og ældre danskere.</p>
-                  </div>
-                </div>
-              </div>
-  
-              <div class="row">
-                <div class="column left">
-                  <div class="label">
-                    <img src="img/mixing.webp" alt="">
-                    <h3>Opskrifter</h3>
-                    <p>At følge opskrifter på drinks er vigtigt for at sikre den rette balance af ingredienser, smag og alkoholstyrke. Det sikrer konsistens og kvalitet i hver servering og hjælper med at undgå mislykkede eller ubalancerede resultater. Præcision i opskriften garanterer en fornøjelig og velafbalanceret drinkoplevelse hver gang.</p>
-                  </div>
-                </div>
-                <div class="column mid">
-                  <div class="label">
-                    <img src="img/summer.webp" alt="">
-                    <h3>Sommer drinks</h3>
-                    <p>
-                      Om sommeren er intet mere forfriskende end at nyde drinks i godt selskab under solens varme stråler. Med kølige cocktails og lækre frugtdrinks kan man slappe af og skabe uforglemmelige minder på terrassen, ved stranden eller ved poolen. Det er den perfekte måde at nyde sommerens afslappede stemning på.</p>
-                  </div>
-                </div>
-              </div>
-            </section>
-          </article>
-      </main>
-      <footer></footer>
-  <script src="js/slideshow.js"></script>
+    </header>
+    <main>
+        <section class="headline">
+          GIN
+        </section> 
+
+        <article class="text-img">
+          <div class="description">
+            Gin fremstilles ved destillation af en neutral kornalkohol sammen med botanicals, der giver spiritussen dens karakteristiske smag. De vigtigste botanicals inkluderer enebær, koriander, citrusskal, kvanrod og angelikarod, selvom der kan anvendes mange andre urter og krydderier for at skabe forskellige smagsprofiler. <br>
+            Der findes flere typer gin, der varierer i smag og produktionsmetode. London Dry Gin er kendt for sin tørre smag og skarpe enebærnoter og er ideel til cocktails. Plymouth Gin er en anden klassisk stil, der er lidt mere fyldig og sødere end London Dry. Derudover findes der moderne ginvarianter, der eksperimenterer med forskellige botanicals og destillationsmetoder.
+          </div>
+          </div>
+          <img src="img/gin-bottles.webp" alt="Forskellige typer af gin i flaske">
+        </article>
+        <article class="text-img reverse">
+          <div class="description">
+            Gin kan nydes på forskellige måder, afhængigt af ens præferencer og lejligheden. Nogle foretrækker at nyde den som en simpel gin og tonic, hvor gin blandes med tonicvand og serveres med is og en skive citron eller lime. Andre foretrækker at nyde den i cocktails som en klassisk Gin Martini, hvor gin og tør vermouth rystes eller røres sammen med is og serveres med en oliven eller en twist af citrusskal. <br>
+            Der er utallige cocktails, der kan laves med gin, og de fleste af dem er elsket for deres forfriskende smag og alsidighed. <br> Nogle af de mest populære gin-baserede cocktails inkluderer: <br>
+            <div class="recipes">
+              <a href="https://magn3054.github.io/drinks/stand-by.html">Negroni,</a>
+              <a href="https://magn3054.github.io/drinks/stand-by.html">Gin Fizz,</a>
+              <a href="https://magn3054.github.io/drinks/stand-by.html">Tom Collins,</a>
+              <a href="https://magn3054.github.io/drinks/stand-by.html">Gin Gimlet.</a>
+            </div>
+          </div>  
+          <img src="img/gin-drinks.webp" alt="Forskellige typer af drinks lavet med gin">
+        </article>
+        <article class="text-img">
+          <div class="description">
+            Gin er mere end bare en drik; det er et symbol på elegance, raffinement og uendelige muligheder for smagsoplevelser. Uanset om det nydes alene eller i en cocktail, vil gin altid være en favorit blandt dem, der værdsætter kvalitet og kompleksitet i deres drikkeoplevelser. Så næste gang du løfter glasset, tag et øjeblik til at sætte pris på den rige historie og den fantastiske smag af gin. Proost!
+          </div>
+          <img src="img/gin-elegant.webp" alt="En grøn drink med gin mynte og appelsinskal">
+        </article>
+    </main>
+    <footer></footer>
   </body>
   </html> 
