--- a/long-drinks.html
+++ b/long-drinks.html
@@ -8,17 +8,19 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/index-main.css">
     <title>Long drinks</title>
+    <meta name="description" content="">
+    <meta name="keywords" content="">
 </head>
 <body>
     <header>
         <nav>
-          <a href="index.html"><img src="img/logo.svg" alt=""></a>
+          <a href="https://magn3054.github.io/drinks"><img src="img/logo.svg" alt="Hjemmside logo"></a>
           <div>
-            <a href="cocktails.html">Cocktails</a>
-            <a href="#">Mocktails</a>
-            <a href="#">Sjusser</a>
-            <a href="#">Shots</a>
-            <a href="alkoholtyper.html">Alkoholtyper</a>
+            <a class="hjem" href="https://magn3054.github.io/drinks/cocktails.html">Cocktails</a>
+            <a href="https://magn3054.github.io/drinks/stand-by.html">Mocktails</a>
+            <a href="https://magn3054.github.io/drinks/stand-by.html">Sjusser</a>
+            <a href="https://magn3054.github.io/drinks/stand-by.html">Shots</a>
+            <a href="https://magn3054.github.io/drinks/alkoholtyper.html">Alkoholtyper</a>
           </div>
         </nav>
       </header>
