--- a/tequila.html
+++ b/tequila.html
@@ -8,17 +8,19 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/tequila.css">
     <title>Tequila</title>
+    <meta name="description" content="">
+    <meta name="keywords" content="">
 </head>
 <body>
     <header>
         <nav>
-          <a href="index.html"><img src="img/logo.svg" alt=""></a>
+          <a href="https://magn3054.github.io/drinks"><img src="img/logo.svg" alt="Hjemmside logo"></a>
           <div>
-            <a class="hjem" href="cocktails.html">Cocktails</a>
-            <a href="#">Mocktails</a>
-            <a href="#">Sjusser</a>
-            <a href="#">Shots</a>
-            <a href="alkoholtyper.html">Alkoholtyper</a>
+            <a href="https://magn3054.github.io/drinks/cocktails.html">Cocktails</a>
+            <a href="https://magn3054.github.io/drinks/stand-by.html">Mocktails</a>
+            <a href="https://magn3054.github.io/drinks/stand-by.html">Sjusser</a>
+            <a href="https://magn3054.github.io/drinks/stand-by.html">Shots</a>
+            <a class="hjem" href="https://magn3054.github.io/drinks/alkoholtyper.html">Alkoholtyper</a>
           </div>
         </nav>
     </header>
@@ -26,9 +28,196 @@
         <section class="headline">
           TEQUILA
         </section> 
-        <article>
-          hej
-        </article>
+        
+        <section class="recipes">              
+          <div class="card">
+            <div class="label">
+              <h2>Margarita</h2>
+              <ul>
+                <li>
+                  <div class="amount">45 ml</div>
+                  <div class="ingredient">Tequila</div>
+                </li>
+                <li>
+                  <div class="amount">30 ml</div>
+                  <div class="ingredient">Friskpresset limejuice</div>
+                </li>
+                <li>
+                  <div class="amount">15 ml</div>
+                  <div class="ingredient">Appelsinlikør (f.eks. triple sec)</div>
+                </li>
+                <li>
+                  <div class="amount">50 g</div>
+                  <div class="ingredient">Salt til glaskanten</div>
+                </li>
+                <li>
+                  <div class="amount">1 stk.</div>
+                  <div class="ingredient">Lime</div>
+                </li>
+                <li>
+                  <div class="amount"></div>
+                  <div class="ingredient">Isterninger</div>
+                </li>
+              </ul>
+            </div>
+            <hr>
+            <div class="howto">
+              <p>Fugt kanten af et glas med en limekile og dyp det i salt.</p>
+              <p>Tilsæt tequila, limejuice og appelsinlikør i en shaker med isterninger og ryst godt.</p>
+              <p>Si blandingen i det forberedte glas fyldt med isterninger.</p>
+              <p>Pynt med en skive lime på kanten af glasset og server straks.</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="label">
+              <h2>Tequila Sunrise</h2>
+              <ul>
+                <li>
+                  <div class="amount">45 ml</div>
+                  <div class="ingredient">Tequila</div>
+                </li>
+                <li>
+                  <div class="amount">90 ml</div>
+                  <div class="ingredient">Appelsinjuice</div>
+                </li>
+                <li>
+                  <div class="amount">15 ml</div>
+                  <div class="ingredient">Grenadine</div>
+                </li>
+                <li>
+                  <div class="amount">1 stk.</div>
+                  <div class="ingredient">Appelsinskive til pynt</div>
+                </li>
+                <li>
+                  <div class="amount"></div>
+                  <div class="ingredient">Isterninger</div>
+                </li>
+              </ul>
+            </div>
+            <hr>
+            <div class="howto">
+              <p>Fyld et højt glas med isterninger.</p>
+              <p>Hæld tequila og appelsinjuice i glasset og rør forsigtigt.</p>
+              <p>Skænk grenadine langsomt over bagsiden af en ske, så den synker ned i glasset og danner en gradienteffekt.</p>
+              <p>Pynt med en appelsinskive og server med det samme.</p>
+            </div>
+          </div>
+        </section>
+        <section class="recipes">              
+          <div class="card">
+            <div class="label">
+              <h2>Paloma</h2>
+              <ul>
+                <li>
+                  <div class="amount">60 ml</div>
+                  <div class="ingredient">Tequila</div>
+                </li>
+                <li>
+                  <div class="amount">90 ml</div>
+                  <div class="ingredient">Grapefrugtsoda</div>
+                </li>
+                <li>
+                  <div class="amount">15 ml</div>
+                  <div class="ingredient">Friskpresset limejuice</div>
+                </li>
+                <li>
+                  <div class="amount">50 g</div>
+                  <div class="ingredient">Salt til glaskanten</div>
+                </li>
+                <li>
+                  <div class="amount"></div>
+                  <div class="ingredient">Isterninger</div>
+                </li>
+                <li>
+                  <div class="amount">1 stk.</div>
+                  <div class="ingredient">Lime</div>
+                </li>
+              </ul>
+            </div>
+            <hr>
+            <div class="howto">
+              <p>Fugt kanten af et glas med en limekile og dyp det i salt.</p>
+              <p>Tilsæt tequila og limejuice i glasset fyldt med isterninger og rør godt.</p>
+              <p>Top med grapefrugtsoda og rør forsigtigt.</p>
+              <p>Pynt med en skive lime og server straks.</p>
+            </div>
+          </div><div class="card">
+            <div class="label">
+              <h2>Tequila Smash</h2>
+              <ul>
+                <li>
+                  <div class="amount">60 ml</div>
+                  <div class="ingredient">Tequila</div>
+                </li>
+                <li>
+                  <div class="amount">30 ml</div>
+                  <div class="ingredient">Friskpresset citronsaft</div>
+                </li>
+                <li>
+                  <div class="amount">15 ml</div>
+                  <div class="ingredient">Sukker</div>
+                </li>
+                <li>
+                  <div class="amount">6-8</div>
+                  <div class="ingredient">Mynteblade</div>
+                </li>
+                <li>
+                  <div class="amount"></div>
+                  <div class="ingredient">Isterninger</div>
+                </li>
+              </ul>
+            </div>
+            <hr>
+            <div class="howto">
+              <p>I en shaker, muddle mynteblade med simpelt sukker og citronsaft.</p>
+              <p>Tilsæt tequila og isterninger til shakeren og ryst godt.</p>
+              <p>Si blandingen i et glas fyldt med isterninger.</p>
+              <p>Pynt med en myntekvist og server straks.</p>
+            </div>
+          </div>
+          
+        </section>
+        <section class="recipes">              
+          <div class="card">
+            <div class="label">
+              <h2>Tequila Mojito</h2>
+              <ul>
+                <li>
+                  <div class="amount">60 ml</div>
+                  <div class="ingredient">Tequila</div>
+                </li>
+                <li>
+                  <div class="amount">30 ml</div>
+                  <div class="ingredient">Friskpresset limejuice</div>
+                </li>
+                <li>
+                  <div class="amount">2 stk.</div>
+                  <div class="ingredient">Sukker</div>
+                </li>
+                <li>
+                  <div class="amount">6-8 </div>
+                  <div class="ingredient">Mynteblade</div>
+                </li>
+                <li>
+                  <div class="amount"></div>
+                  <div class="ingredient">Sodavand</div>
+                </li>
+                <li>
+                  <div class="amount"></div>
+                  <div class="ingredient">Isterninger</div>
+                </li>
+              </ul>
+            </div>
+            <hr>
+            <div class="howto">
+              <p>I en cocktailshaker, muddle mynteblade med sukker og limejuice.</p>
+              <p>Tilsæt tequila og isterninger til shakeren og ryst godt.</p>
+              <p>Si blandingen i et højt glas fyldt med isterninger.</p>
+              <p>Top op med sodavand og rør forsigtigt.</p>
+              <p>Pynt med en myntekvist og en skive lime efter ønske.</p>
+            </div>
+          </div>
+        </section>
     </main>
     <footer></footer>
   </body>
