--- a/cocktails.html
+++ b/cocktails.html
@@ -8,17 +8,19 @@
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/cocktails.css">
   <title>Cocktails</title>
+  <meta name="description" content="">
+  <meta name="keywords" content="">
 </head>
 <body>
     <header>
       <nav>
-        <a href="https://magn3054.github.io/drinks/index.html"><img src="img/logo.svg" alt="Hjemmside logo"></a>
+        <a href="https://magn3054.github.io/drinks"><img src="img/logo.svg" alt="Hjemmside logo"></a>
         <div>
-          <a class="hjem" href="cocktails.html">Cocktails</a>
+          <a class="hjem" href="https://magn3054.github.io/drinks/cocktails.html">Cocktails</a>
           <a href="https://magn3054.github.io/drinks/stand-by.html">Mocktails</a>
           <a href="https://magn3054.github.io/drinks/stand-by.html">Sjusser</a>
           <a href="https://magn3054.github.io/drinks/stand-by.html">Shots</a>
-          <a href="alkoholtyper.html">Alkoholtyper</a>
+          <a href="https://magn3054.github.io/drinks/alkoholtyper.html">Alkoholtyper</a>
         </div>
       </nav>
     </header>
