--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
       <nav>
-        <a href="https://magn3054.github.io/drinks/index.html"><img src="img/logo.svg" alt="Hjemmside logo"></a>
+        <a href="https://magn3054.github.io/drinks"><img src="img/logo.svg" alt="Hjemmside logo"></a>
         <div>
           <a href="https://magn3054.github.io/drinks/cocktails.html">Cocktails</a>
           <a href="https://magn3054.github.io/drinks/stand-by.html">Mocktails</a>
@@ -36,7 +36,7 @@
           </div>
           
           <div class="slides fade">
-            <a href="https://magn3054.github.io/drinks/stand-by.html"><img src="img/gintonic-drink2.webp" alt=""></a>
+            <a href="https://magn3054.github.io/drinks/stand-by.html"><img src="img/gintonic-drink2.webp" alt="Friske gin og tonics"></a>
           </div>
           
           <div style="text-align:center">
