gin and tequila page done

--- a/cocktails.html
+++ b/cocktails.html
@@ -33,7 +33,8 @@
                 <div class="label">
                   <img src="img/longdrinks.webp" alt="Drinks i lange smalle glas">
                   <h3>Long drinks</h3>
-                  <p>Long drinks er forfriskende cocktails serveret i høje glas fyldt med is. Disse læskende drikkevarer kombinerer spiritus, sodavand eller juice og ofte friske frugter eller urter. Med deres afbalancerede smag og forfriskende konsistens er long drinks perfekte til at nyde på varme sommerdage eller som en afslappende aperitif når som helst.</p>
+                  <p>Long drinks er forfriskende cocktails serveret i høje glas fyldt med is. Disse læskende drikkevarer kombinerer spiritus, sodavand eller juice og ofte friske frugter eller urter. <br> 
+                    Med deres afbalancerede smag og forfriskende konsistens er long drinks perfekte til at nyde på varme sommerdage eller som en afslappende aperitif når som helst.</p>
                 </div>
               </a>
             </div>
@@ -42,7 +43,8 @@
                 <div class="label">
                   <img src="img/martini.webp" alt="Farverige martinier">
                   <h3>Martinier</h3>
-                  <p>Martinier er elegante cocktails, der består af gin eller vodka og tør vermouth, serveret i et køligt glas. Denne klassiker er kendt for sin forfinede smag og enkelhed. Martinier tilbyder en perfekt balance mellem spiritus og vermouth, hvilket gør dem til det ideelle valg for dem, der sætter pris på tidløs elegance.</p>
+                  <p>Martinier er elegante cocktails, der består af gin eller vodka og tør vermouth, serveret i et køligt glas. Denne klassiker er kendt for sin forfinede smag og enkelhed. 
+                  Martinier tilbyder en perfekt balance mellem spiritus og vermouth, hvilket gør dem til det ideelle valg for dem, der sætter pris på tidløs elegance.</p>
                 </div>
               </a>
             </div>
@@ -63,7 +65,8 @@
                 <div class="label">
                   <img src="img/rocks.webp" alt="On the rocks, drinks i lave glas">
                   <h3>On the rocks</h3>
-                  <p>On the rocks drinks er klassiske cocktails serveret direkte over is. Denne enkle serveringsmetode bringer en forfriskende kølighed og fortynding, der fremhæver spiritussens komplekse smagsprofil. Fra whisky on the rocks til vodka eller tequila, er disse drinks perfekte til at nyde langsomt og afslappet.</p>
+                  <p>On the rocks drinks er klassiske cocktails serveret direkte over is. Denne enkle serveringsmetode bringer en forfriskende kølighed og fortynding, der fremhæver spiritussens komplekse smagsprofil. <br> 
+                  Fra whisky on the rocks til vodka eller tequila, er disse drinks perfekte til at nyde langsomt og afslappet.</p>
                 </div>
               </a>
             </div>
