--- a/gin.html
+++ b/gin.html
@@ -29,33 +29,171 @@
           GIN
         </section> 
 
-        <article class="text-img">
-          <div class="description">
-            Gin fremstilles ved destillation af en neutral kornalkohol sammen med botanicals, der giver spiritussen dens karakteristiske smag. De vigtigste botanicals inkluderer enebær, koriander, citrusskal, kvanrod og angelikarod, selvom der kan anvendes mange andre urter og krydderier for at skabe forskellige smagsprofiler. <br>
-            Der findes flere typer gin, der varierer i smag og produktionsmetode. London Dry Gin er kendt for sin tørre smag og skarpe enebærnoter og er ideel til cocktails. Plymouth Gin er en anden klassisk stil, der er lidt mere fyldig og sødere end London Dry. Derudover findes der moderne ginvarianter, der eksperimenterer med forskellige botanicals og destillationsmetoder.
-          </div>
-          </div>
-          <img src="img/gin-bottles.webp" alt="Forskellige typer af gin i flaske">
-        </article>
-        <article class="text-img reverse">
-          <div class="description">
-            Gin kan nydes på forskellige måder, afhængigt af ens præferencer og lejligheden. Nogle foretrækker at nyde den som en simpel gin og tonic, hvor gin blandes med tonicvand og serveres med is og en skive citron eller lime. Andre foretrækker at nyde den i cocktails som en klassisk Gin Martini, hvor gin og tør vermouth rystes eller røres sammen med is og serveres med en oliven eller en twist af citrusskal. <br>
-            Der er utallige cocktails, der kan laves med gin, og de fleste af dem er elsket for deres forfriskende smag og alsidighed. <br> Nogle af de mest populære gin-baserede cocktails inkluderer: <br>
-            <div class="recipes">
-              <a href="https://magn3054.github.io/drinks/stand-by.html">Negroni,</a>
-              <a href="https://magn3054.github.io/drinks/stand-by.html">Gin Fizz,</a>
-              <a href="https://magn3054.github.io/drinks/stand-by.html">Tom Collins,</a>
-              <a href="https://magn3054.github.io/drinks/stand-by.html">Gin Gimlet.</a>
+        <section class="recipes">              
+          <div class="card">
+            <div class="label">
+              <h2>Gin & Tonic</h2>
+              <ul>
+                <li>
+                  <div class="amount">50 ml</div>
+                  <div class="ingredient">Gin</div>
+                </li>
+                <li>
+                  <div class="amount">33 cl</div>
+                  <div class="ingredient">Tonicvand</div>
+                </li>
+                <li>
+                  <div class="amount">1 stk</div>
+                  <div class="ingredient">Citronskive</div>
+                </li>
+                <li>
+                  <div class="amount"></div>
+                  <div class="ingredient">Isterninger</div>
+                </li>
+              </ul>
             </div>
-          </div>  
-          <img src="img/gin-drinks.webp" alt="Forskellige typer af drinks lavet med gin">
-        </article>
-        <article class="text-img">
-          <div class="description">
-            Gin er mere end bare en drik; det er et symbol på elegance, raffinement og uendelige muligheder for smagsoplevelser. Uanset om det nydes alene eller i en cocktail, vil gin altid være en favorit blandt dem, der værdsætter kvalitet og kompleksitet i deres drikkeoplevelser. Så næste gang du løfter glasset, tag et øjeblik til at sætte pris på den rige historie og den fantastiske smag af gin. Proost!
+            <hr>
+            <div class="howto">
+              <p>Fyld et glas med is.</p>
+              <p>Hæld gin over isen.</p>
+              <p>Top op med tonicvand.</p>
+              <p>Rør forsigtigt og pynt med en citronskive eller en limebåd.</p>
+            </div>
           </div>
-          <img src="img/gin-elegant.webp" alt="En grøn drink med gin mynte og appelsinskal">
-        </article>
+          <div class="card">
+            <div class="label">
+              <h2>Negroni</h2>
+              <ul>
+                <li>
+                  <div class="amount">30 ml</div>
+                  <div class="ingredient">Gin</div>
+                </li>
+                <li>
+                  <div class="amount">30 ml</div>
+                  <div class="ingredient">Sød Vermouth</div>
+                </li>
+                <li>
+                  <div class="amount">30 ml</div>
+                  <div class="ingredient">Campari</div>
+                </li>
+                <li>
+                  <div class="amount">1 stk.</div>
+                  <div class="ingredient">Appelsinskal til pynt</div>
+                </li>
+                <li>
+                  <div class="amount"></div>
+                  <div class="ingredient">Isterninger</div>
+                </li>
+              </ul>
+            </div>
+            <hr>
+            <div class="howto">
+              <p>Fyld et højt glas med isterninger.</p>
+              <p>Hæld gin, sød vermouth og Campari over isterningerne</p>
+              <p>Rør forsigtigt og pynt med en appelsinskal.</p>
+            </div>
+          </div>
+        </section>
+        <section class="recipes">              
+          <div class="card">
+            <div class="label">
+              <h2>Gin Martini</h2>
+              <ul>
+                <li>
+                  <div class="amount">60 ml</div>
+                  <div class="ingredient">Gin</div>
+                </li>
+                <li>
+                  <div class="amount">15 ml</div>
+                  <div class="ingredient">Tør Vermouth</div>
+                </li>
+                <li>
+                  <div class="amount"></div>
+                  <div class="ingredient">Oliven el. Citronskal</div>
+                </li>
+              </ul>
+            </div>
+            <hr>
+            <div class="howto">
+              <p>Ryst gin og tør vermouth sammen med is i en shaker.</p>
+              <p>Si blandingen over i et cocktailglas.</p>
+              <p>Pynt med en oliven eller en twist af citrusskal.</p>
+            </div>
+          </div><div class="card">
+            <div class="label">
+              <h2>Gimlet</h2>
+              <ul>
+                <li>
+                  <div class="amount">60 ml</div>
+                  <div class="ingredient">Gin</div>
+                </li>
+                <li>
+                  <div class="amount">30 ml</div>
+                  <div class="ingredient">Friskpresset Limejuice</div>
+                </li>
+                <li>
+                  <div class="amount">15 ml</div>
+                  <div class="ingredient">Sukkersirup</div>
+                </li>
+                <li>
+                  <div class="amount">1 stk.</div>
+                  <div class="ingredient">Limebåd</div>
+                </li>
+                <li>
+                  <div class="amount"></div>
+                  <div class="ingredient">Isterninger</div>
+                </li>
+              </ul>
+            </div>
+            <hr>
+            <div class="howto">
+              <p>Ryst gin, limejuice og sukkersirup sammen med is i en shaker.</p>
+              <p>Si blandingen over i et glas fyldt med is.</p>
+              <p>Pynt med en limebåd.</p>
+            </div>
+          </div>
+          
+        </section>
+        <section class="recipes">              
+          <div class="card">
+            <div class="label">
+              <h2>Tom Collins</h2>
+              <ul>
+                <li>
+                  <div class="amount">60 ml</div>
+                  <div class="ingredient">Gin</div>
+                </li>
+                <li>
+                  <div class="amount">30 ml</div>
+                  <div class="ingredient">Friskpresset Citronsaft</div>
+                </li>
+                <li>
+                  <div class="amount">2 stk.</div>
+                  <div class="ingredient">Sukkersirup</div>
+                </li>
+                <li>
+                  <div class="amount">1 stk. </div>
+                  <div class="ingredient">Citronskive</div>
+                </li>
+                <li>
+                  <div class="amount"></div>
+                  <div class="ingredient">Sodavand</div>
+                </li>
+                <li>
+                  <div class="amount"></div>
+                  <div class="ingredient">Isterninger</div>
+                </li>
+              </ul>
+            </div>
+            <hr>
+            <div class="howto">
+              <p>Fyld et højt glas med is.</p>
+              <p>Hæld gin, friskpresset citronsaft og sukkersirup over isen.</p>
+              <p>Top op med sodavand og rør forsigtigt.</p>
+              <p>Pynt med en citronskive</p>
+            </div>
+          </div>
+        </section>
     </main>
     <footer></footer>
   </body>
