--- a/long-drinks.html
+++ b/long-drinks.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="img/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="css/page-layout.css">
     <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/index-main.css">
+    <link rel="stylesheet" href="css/longdrinks.css">
     <title>Long drinks</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
