--- a/long-drinks.html
+++ b/long-drinks.html
@@ -25,57 +25,126 @@
         </nav>
       </header>
       <main> 
-          <article>
-            <section>
-              <div class="section-heading">
-                <span class="line"></span>
-                <span class="section-text">News</span>
-                <span class="line"></span>
-              </div>
-              
-              <div class="row">
-                <div class="column left">
-                  <div class="label">
-                    <img src="img/tequila.webp" alt="">
-                    <h3>Tequila</h3>
-                    <p>Tequila er en ikonisk mexicansk spiritus lavet af agaveplanten. Med sin karakteristiske smag og stærke alkoholindhold er tequila elsket verden over. Fra traditionelle margaritas til lækre shots med salt og citron er tequila synonymt med livlig feststemning og uforglemmelige øjeblikke.</p>
-                  </div>
-                </div>
-                <div class="column mid">
-                  <div class="label">
-                    <img src="img/martini.webp" alt="">
-                    <h3>Martini variationer</h3>
-                    <p>Martinier er en elegant cocktail bestående af gin eller vodka og tør vermouth, serveret i et køligt glas. Den perfekte balance mellem spiritus og vermouth skaber en forfriskende og sofistikeret smagsoplevelse. Martinien er et tidløst valg for dem, der søger klassisk raffinement i deres drinks.</p>
-                  </div>
-                </div>
-                <div class="column right">
-                  <div class="label">
-                    <img src="img/sjusser.webp" alt="">
-                    <h3>Martini variationer</h3>
-                    <p>Sjusser er en klassisk dansk cocktail lavet af en blanding af sodavand og alkohol efter valg. Denne forfriskende og boblende drink er populær til sociale sammenkomster og fester. Med sin lette smag af alkohol og brusende sodavand er sjusser en favorit blandt både unge og ældre danskere.</p>
-                  </div>
-                </div>
-              </div>
-  
-              <div class="row">
-                <div class="column left">
-                  <div class="label">
-                    <img src="img/mixing.webp" alt="">
-                    <h3>Opskrifter</h3>
-                    <p>At følge opskrifter på drinks er vigtigt for at sikre den rette balance af ingredienser, smag og alkoholstyrke. Det sikrer konsistens og kvalitet i hver servering og hjælper med at undgå mislykkede eller ubalancerede resultater. Præcision i opskriften garanterer en fornøjelig og velafbalanceret drinkoplevelse hver gang.</p>
-                  </div>
-                </div>
-                <div class="column mid">
-                  <div class="label">
-                    <img src="img/summer.webp" alt="">
-                    <h3>Sommer drinks</h3>
-                    <p>
-                      Om sommeren er intet mere forfriskende end at nyde drinks i godt selskab under solens varme stråler. Med kølige cocktails og lækre frugtdrinks kan man slappe af og skabe uforglemmelige minder på terrassen, ved stranden eller ved poolen. Det er den perfekte måde at nyde sommerens afslappede stemning på.</p>
-                  </div>
-                </div>
-              </div>
-            </section>
-          </article>
+        <section class="headline">
+          LONG DRINKS
+        </section> 
+
+        <section class="description">
+          <div class="textbox">
+            <div class="column">
+              <p>
+                Long drinks, er forfriskende og letdrikkelige cocktails, der typisk serveres i høje glas fyldt med isterninger. 
+              </p>
+              <p>
+                Disse drinks er kendt for deres skønne smagskombinationer og alsidighed, hvilket gør dem til favoritter blandt både cocktailentusiaster og dem, der bare ønsker at slappe af med noget lækkert at drikke. 
+              </p>
+            </div>
+            <div class="column">
+              <p>
+                Med ingredienser som gin, vodka, rom eller tequila, blandet med sodavand, juice eller tonicvand, tilbyder long drinks en bred vifte af muligheder for at tilpasse smagen efter ens præference. 
+              </p>
+              <p>
+                Uanset om du foretrækker en frisk Gin and Tonic, en sød og sur Tequila Sunrise eller en klassisk Mojito, er der en langdrink for enhver smag og lejlighed. Så sæt dig tilbage, slap af og lad dig forkæle med en lækker long drink! Skål!
+              </p>
+            </div>
+          </div>
+          <img src="img/icetea.webp" alt="Tre long island ice tea drinks">
+        </section>
+
+        <section class="recipes">              
+          <div class="card">
+            <div class="label">
+              <h2>Long Island Ice Tea</h2>
+              <ul>
+                <li>
+                  <div class="amount">15 ml</div>
+                  <div class="ingredient">Vodka</div>
+                </li>
+                <li>
+                  <div class="amount">15 ml</div>
+                  <div class="ingredient">Gin</div>
+                </li>
+                <li>
+                  <div class="amount">15 ml</div>
+                  <div class="ingredient">Lys Rom</div>
+                </li>
+                <li>
+                  <div class="amount">15 g</div>
+                  <div class="ingredient">Lys Tequila</div>
+                </li>
+                <li>
+                  <div class="amount">15 ml</div>
+                  <div class="ingredient">Triple Sec</div>
+                </li>
+                <li>
+                  <div class="amount">30 ml</div>
+                  <div class="ingredient">Frisk presset citronsaft</div>
+                </li>
+                <li>
+                  <div class="amount">15 ml</div>
+                  <div class="ingredient">Sukkersirup</div>
+                </li>
+                <li>
+                  <div class="amount"></div>
+                  <div class="ingredient">Cola</div>
+                </li>
+                <li>
+                  <div class="amount">1 stk.</div>
+                  <div class="ingredient">Citronskive</div>
+                </li>
+                <li>
+                  <div class="amount"></div>
+                  <div class="ingredient">Isterninger</div>
+                </li>
+              </ul>
+            </div>
+            <hr>
+            <div class="howto">
+              <p>Fyld et højt glas med isterninger.</p>
+              <p>Tilføj vodka, gin, lys rom, tequila, Cointreau, friskpresset citronsaft og sukkersirup til glasset.</p>
+              <p>Rør forsigtigt ingredienserne sammen for at blande dem.</p>
+              <p>Top op med cola, og rør forsigtigt igen for at blande.</p>
+              <p>Pynt med en citronskive på kanten af glasset</p>
+              <p>Server straks og nyd din forfriskende Long Island Iced Tea!</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="label">
+              <h2>Caipirinha</h2>
+              <ul>
+                <li>
+                  <div class="amount">50 ml</div>
+                  <div class="ingredient">Cachaça</div>
+                </li>
+                <li>
+                  <div class="amount">2 Spsk.</div>
+                  <div class="ingredient">Rørsukker</div>
+                </li>
+                <li>
+                  <div class="amount">1 stk.</div>
+                  <div class="ingredient">Lime</div>
+                </li>
+                <li>
+                  <div class="amount"></div>
+                  <div class="ingredient">Sprite</div>
+                </li>
+                <li>
+                  <div class="amount"></div>
+                  <div class="ingredient">Isterninger</div>
+                </li>
+              </ul>
+            </div>
+            <hr>
+            <div class="howto">
+              <p>Placer limekvartene og sukkeret i bunden af en mixer.</p>
+              <p>Brug en muddler til at mase lime og sukker sammen for at frigive saften fra limeen og opløse sukkeret.</p>
+              <p>Tilføj cachaça'en til mixeren</p>
+              <p>Fyld mixeren med isterninger og ryst forsigtigt for at blande ingredienserne.</p>
+              <p>Fyld et højt glas med blandingen og top op med sprite.</p>
+              <p>Server straks og nyd din forfriskende Caipirinha!</p>
+            </div>
+          </div>
+        </section>
       </main>
       <footer></footer>
   <script src="js/slideshow.js"></script>
