--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Drinkz</title>
+  <title>Drinks</title>
   <link rel="icon" href="img/logo.svg" type="image/x-icon">
   <link rel="stylesheet" href="css/page-layout.css">
   <link rel="stylesheet" href="css/header.css">
